add high anisotropy code

--- a/pipeline_benchmark.ipynb
+++ b/pipeline_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a4249c11",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,8 @@
     "- First, created a plantseg virtual enviroment: \n",
     "`conda create -n plant-seg -c pytorch -c conda-forge -c lcerrone -c awolny pytorch=1.9 pytorch-3dunet=1.3.7 plantseg` \n",
     "- activate the environment: `conda activate plant-seg` \n",
-    "- download the ovules test dataset: https://osf.io/uzq3w/ to `../data/ovules/plantseg_test/`\n",
+    "- download the ovules test dataset: https://osf.io/uzq3w/ to `../data/ovules/plantseg_test/` \n",
+    "- set the `path` in `plantseg.yaml` to `../data/ovules/plantseg_test/` \n",
     "- perform segmentation with the `confocal_unet_bce_dice_ds1x` by running `plantseg --config plantseg.yaml`\n",
     "- the predictions are saved to `../data/ovules/plantseg_test/PreProcessing/confocal_unet_bce_dice_ds1x/\n",
     "`"
@@ -637,9 +638,525 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "694415ee",
+   "metadata": {},
+   "source": [
+    "# Ovules with High Anistropy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67670556",
+   "metadata": {},
+   "source": [
+    "### PlantSeg\n",
+    "- activate the environment: `conda activate plant-seg` \n",
+    "- make sure to set the `path` in plantseg.yaml to `../data/ovules_subsampled/plantseg_test/`\n",
+    "- perform segmentation with the `confocal_unet_bce_dice_ds1x` by running `plantseg --config plantseg.yaml`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fe73fa47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plantseg_results_folder = \"../data/ovules_subsampled/plantseg_test/PreProcessing/confocal_unet_bce_dice_ds1x/MultiCut/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6579fa30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_filenames = [\"N_294_final_crop_ds2\", \n",
+    "                 \"N_435_final_crop_ds2\",\n",
+    "                 \"N_441_final_crop_ds2\",\n",
+    "                 \"N_511_final_crop_ds2\",\n",
+    "                 \"N_522_final_crop_ds2\",\n",
+    "                 \"N_590_final_crop_ds2\",\n",
+    "                 \"N_593_final_crop_ds2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ed7b382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n",
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for test_filename in test_filenames: \n",
+    "    print(\"Starting %s\" % test_filename) \n",
+    "    \n",
+    "    with h5py.File(\"%s/%s_predictions_multicut.h5\" % (plantseg_results_folder, test_filename), \"r\") as f:\n",
+    "        plantseg = np.array(list(f['segmentation'])) \n",
+    "        \n",
+    "    plantseg[np.where(plantseg == 1)] = 0 # plantseg use 1 as labels\n",
+    "    np.save(\"./results/ovules_subsampled/pipeline/plantseg/%s.npy\" % test_filename, plantseg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b3755ac",
+   "metadata": {},
+   "source": [
+    "### Generate cellpose3d results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "77089da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = '../data/ovules/cellpose_train/models/cellpose_residual_on_style_on_concatenation_off_cellpose_train_2022_09_19_14_23_42.578556'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c7d369f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subsampled_ovules_folder = \"../data/ovules_subsampled/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd6dc3f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow_threshold = 1\n",
+    "model = models.CellposeModel(gpu=True, pretrained_model=model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f1e2b527",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n",
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for test_filename in test_filenames: \n",
+    "    print(\"Starting %s\" % test_filename)\n",
+    "    img = np.load(\"%s/raw/%s.npy\" % (subsampled_ovules_folder, test_filename)) \n",
+    "    masks, _, _ = model.eval(img, do_3D=True, flow_threshold=flow_threshold, channels = [0,0]) \n",
+    "    np.save(\"./results/ovules_subsampled/pipeline/cellpose3d/%s.npy\" % test_filename, masks) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0693d189",
+   "metadata": {},
+   "source": [
+    "### Generate cellstitch results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e7e6c5db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n",
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for test_filename in test_filenames: \n",
+    "    print(\"Starting %s\" % test_filename)\n",
+    "    img = np.load(\"%s/raw/%s.npy\" % (subsampled_ovules_folder, test_filename)) \n",
+    "    \n",
+    "    masks, _, _ = model.eval(list(img), flow_threshold=flow_threshold, channels = [0,0]) \n",
+    "    cellstitch = np.array(masks)\n",
+    "    full_stitch(cellstitch) \n",
+    "    np.save(\"./results/ovules_subsampled/pipeline/cellstitch/%s.npy\" % test_filename, cellstitch) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a4c3c4",
+   "metadata": {},
+   "source": [
+    "# Benchmark Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7f75cda2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = 'ovules_subsampled'\n",
+    "\n",
+    "ap_threshold = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1e44cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yining/anaconda3/envs/segmentation/lib/python3.8/site-packages/cellpose/metrics.py:205: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  iou = overlap / (n_pixels_pred + n_pixels_true - overlap)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# plantseg benchmark\n",
+    "data = [] \n",
+    "for filename in test_filenames:\n",
+    "    print(\"Starting %s\" % filename)\n",
+    "    labels = np.load('../data/%s/labels/%s.npy' % (dataset, filename)) \n",
+    "    true_num_cells = np.unique(labels).size - 1 \n",
+    "    true_avg_vol = get_avg_vol(labels) \n",
+    "    \n",
+    "    masks = np.load(\"./results/%s/pipeline/plantseg/%s.npy\" % (dataset, filename)) \n",
+    "    \n",
+    "    num_cells = np.unique(masks).size - 1\n",
+    "    d_num_cells = abs(num_cells - true_num_cells) / true_num_cells\n",
+    "\n",
+    "    avg_vol = get_avg_vol(masks)\n",
+    "    d_avg_vol = abs(true_avg_vol - avg_vol) / true_avg_vol\n",
+    "\n",
+    "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
+    "    \n",
+    "    row = [ \n",
+    "        filename, \n",
+    "        d_num_cells, \n",
+    "        d_avg_vol, \n",
+    "        ap, \n",
+    "        tp, \n",
+    "        fp, \n",
+    "        fn\n",
+    "    ]\n",
+    "    \n",
+    "    data.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d111fa80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plantseg_df = pd.DataFrame(data, columns=[\n",
+    "    \"filename\",  \n",
+    "    \"d_num_cells\", \n",
+    "    \"d_avg_vol\", \n",
+    "    \"ap\", \n",
+    "    \"tp\", \n",
+    "    \"fp\", \n",
+    "    \"fn\"\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28b9e3e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plantseg_df.to_csv(\"./results/%s/pipeline/plantseg.csv\" % dataset, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "58539ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n",
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cellpose3d benchmark\n",
+    "data = [] \n",
+    "for filename in test_filenames:\n",
+    "    print(\"Starting %s\" % filename)\n",
+    "    labels = np.load('../data/%s/labels/%s.npy' % (dataset, filename))\n",
+    "    true_num_cells = np.unique(labels).size - 1 \n",
+    "    true_avg_vol = get_avg_vol(labels) \n",
+    "    \n",
+    "    masks = np.load(\"./results/%s/pipeline/cellpose3d/%s.npy\" % (dataset, filename)) \n",
+    "    \n",
+    "    num_cells = np.unique(masks).size - 1\n",
+    "    d_num_cells = abs(num_cells - true_num_cells) / true_num_cells\n",
+    "\n",
+    "    avg_vol = get_avg_vol(masks)\n",
+    "    d_avg_vol = abs(true_avg_vol - avg_vol) / true_avg_vol\n",
+    "\n",
+    "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
+    "    \n",
+    "    row = [ \n",
+    "        filename, \n",
+    "        d_num_cells, \n",
+    "        d_avg_vol, \n",
+    "        ap, \n",
+    "        tp, \n",
+    "        fp, \n",
+    "        fn\n",
+    "    ]\n",
+    "    \n",
+    "    data.append(row)\n",
+    "\n",
+    "cp_df = pd.DataFrame(data, columns=[\n",
+    "    \"filename\",  \n",
+    "    \"d_num_cells\", \n",
+    "    \"d_avg_vol\", \n",
+    "    \"ap\", \n",
+    "    \"tp\", \n",
+    "    \"fp\", \n",
+    "    \"fn\"\n",
+    "])\n",
+    "\n",
+    "cp_df.to_csv(\"./results/%s/pipeline/cellpose3d.csv\" % dataset, index=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "aa1b501d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yining/anaconda3/envs/segmentation/lib/python3.8/site-packages/cellpose/metrics.py:205: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  iou = overlap / (n_pixels_pred + n_pixels_true - overlap)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_435_final_crop_ds2\n",
+      "Starting N_441_final_crop_ds2\n",
+      "Starting N_511_final_crop_ds2\n",
+      "Starting N_522_final_crop_ds2\n",
+      "Starting N_590_final_crop_ds2\n",
+      "Starting N_593_final_crop_ds2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cellstitch benchmark\n",
+    "data = [] \n",
+    "for filename in test_filenames:\n",
+    "    print(\"Starting %s\" % filename)\n",
+    "    labels = np.load('../data/%s/labels/%s.npy' % (dataset, filename)) \n",
+    "    true_num_cells = np.unique(labels).size - 1 \n",
+    "    true_avg_vol = get_avg_vol(labels) \n",
+    "    \n",
+    "    masks = np.load(\"./results/%s/pipeline/cellstitch/%s.npy\" % (dataset, filename))\n",
+    "    \n",
+    "    num_cells = np.unique(masks).size - 1\n",
+    "    d_num_cells = abs(num_cells - true_num_cells) / true_num_cells\n",
+    "\n",
+    "    avg_vol = get_avg_vol(masks)\n",
+    "    d_avg_vol = abs(true_avg_vol - avg_vol) / true_avg_vol\n",
+    "\n",
+    "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
+    "    \n",
+    "    row = [ \n",
+    "        filename, \n",
+    "        d_num_cells, \n",
+    "        d_avg_vol, \n",
+    "        ap, \n",
+    "        tp, \n",
+    "        fp, \n",
+    "        fn\n",
+    "    ]\n",
+    "    \n",
+    "    data.append(row)\n",
+    "\n",
+    "ct_df = pd.DataFrame(data, columns=[\n",
+    "    \"filename\",  \n",
+    "    \"d_num_cells\", \n",
+    "    \"d_avg_vol\", \n",
+    "    \"ap\", \n",
+    "    \"tp\", \n",
+    "    \"fp\", \n",
+    "    \"fn\"\n",
+    "])\n",
+    "\n",
+    "ct_df.to_csv(\"./results/%s/pipeline/cellstitch.csv\" % dataset, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f9f242a",
+   "metadata": {},
+   "source": [
+    "### Analyze Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "81c6fed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_358683/3250397692.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  plantseg_df.mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "d_num_cells       0.686598\n",
+       "d_avg_vol         1.063578\n",
+       "ap                0.061418\n",
+       "tp              227.428571\n",
+       "fp             2129.142857\n",
+       "fn             1255.714286\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plantseg_df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3ee9d0f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_358683/1665330357.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  plantseg_df.std()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "d_num_cells      0.492997\n",
+       "d_avg_vol        0.535862\n",
+       "ap               0.020152\n",
+       "tp             154.790027\n",
+       "fp             926.301504\n",
+       "fn             727.763632\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plantseg_df.std()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3708cf45",
+   "id": "0f66ad7d",
    "metadata": {},
    "outputs": [],
    "source": []
