--- a/notebooks/pipeline_benchmark_ovules.ipynb
+++ b/notebooks/pipeline_benchmark_ovules.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "32484df9",
    "metadata": {},
    "outputs": [],
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7380b789",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ovules_folder = \"../DATA/ovules\""
+    "ovules_folder = \"../DATA/ovules_subsampled\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d9ddf488",
    "metadata": {},
    "outputs": [],
@@ -233,14 +233,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting N_294_final_crop_ds2.npy\n",
-      "Starting N_435_final_crop_ds2.npy\n"
+      "Starting N_294_final_crop_ds2.npy\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n",
@@ -252,7 +286,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_441_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting N_511_final_crop_ds2.npy\n"
      ]
     },
@@ -260,6 +319,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n"
      ]
     },
@@ -274,6 +338,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n"
@@ -291,6 +360,20 @@
      "output_type": "stream",
      "text": [
       "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n"
      ]
     },
@@ -305,6 +388,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
       "WARNING: no mask pixels found\n"
      ]
     }
@@ -462,12 +555,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "346d213c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'ovules' # ovules or ovules_subsampled\n",
+    "dataset = 'ovules_subsampled' # ovules or ovules_subsampled\n",
     "\n",
     "ap_threshold = 0.5"
    ]
@@ -507,7 +600,7 @@
     }
    ],
    "source": [
-    "method = \"cellstitch\" \n",
+    "method = \"plantseg\" \n",
     "\n",
     "data = [] \n",
     "for filename in test_filenames:\n",
@@ -563,116 +656,6 @@
     "])\n",
     "\n",
     "df.to_csv(\"./results/%s/pipeline/%s.csv\" % (dataset, method), index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a5bc8b9",
-   "metadata": {},
-   "source": [
-    "### Analyze Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a4090cc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "method = 'cellstitch'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "071b4fa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('results/%s/pipeline/%s.csv' % (dataset, method))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "76a21d2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_559304/3698961737.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  df.mean()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "d_num_cells           0.212236\n",
-       "d_avg_vol             0.126543\n",
-       "ap                    0.476312\n",
-       "tp                 1374.285714\n",
-       "fp                  766.857143\n",
-       "fn                  800.428571\n",
-       "precision             0.642519\n",
-       "recall                0.644789\n",
-       "true_num_cells     1487.571429\n",
-       "true_avg_vol      41812.575714\n",
-       "num_cells          1454.000000\n",
-       "avg_vol           37439.755426\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ac1216f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_559304/3390915376.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  df.std()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "d_num_cells           0.154432\n",
-       "d_avg_vol             0.076523\n",
-       "ap                    0.107317\n",
-       "tp                  654.703422\n",
-       "fp                  384.396683\n",
-       "fn                  613.369616\n",
-       "precision             0.079772\n",
-       "recall                0.135809\n",
-       "true_num_cells      883.144922\n",
-       "true_avg_vol      16328.584315\n",
-       "num_cells           675.544965\n",
-       "avg_vol           10953.323258\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.std()"
    ]
   },
   {
